# haemera

./: .coveragerc  .gitignore  README.rst  bootstrap-material-design-_core.scss  convert_thinkingrock.py  debug.ini  pyproject.toml  setup.py  tox.ini
src/ws/haemera/: action.py  application.py  db.py  ical.py  project.py  serializer.py
src/ws/haemera/static/css/: bootstrap-material-design-4.1.1.min.css  style.css
src/ws/haemera/static/js/: listing.js
src/ws/haemera/templates/: actionlist.html  layout.html  listing.html  login.html
src/ws/haemera/templates/project/: edit.html  show.html
src/ws/haemera/tests/: conftest.py  test_ical.py  test_serializer.py
